--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,6 +8,7 @@
     <title>Friend Finder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
   </head>
 
   <body>
@@ -167,7 +168,7 @@
           </div>
           <div class="modal-body">
             <h2 id="friendName"></h2>
-            <img id="friendImg" src="" alt="">
+            <img id="friendPhoto" class="img-responsive" alt="">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -177,10 +178,12 @@
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
 
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script>
-      $("#submit").on("click", function() {
+      $("#submit").on("click", function()
+      {
 
         var userData = {
           name: $("#name").val(),
@@ -190,7 +193,8 @@
         console.log(userData);
         var currentURL = window.location.origin;
 
-        $.post(currentURL + "/api/friends", userData, function(data) {
+        $.post(currentURL + "/api/friends", userData, function(data)
+        {
 
           $("#friendName").text(data.name);
           $('#friendPhoto').attr("src", data.photo);
